# GKR-MSM

./: .gitignore  Cargo.toml  README.md  rust-toolchain
benches/: bintree.rs  gkr_msm_simple.rs  gkr_msm_simple_prof.rs  map_over_poly.rs  pippenger.rs  polynomial.rs  sumcheck.rs
benches/criterion/gkr_msm_simple/case__(4, 10)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 10)/gkr_msm_simple_baseline/: estimates.json  raw.csv  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 10)/new/: benchmark.json  sample.json
benches/criterion/gkr_msm_simple/case__(4, 10)/report/: index.html
benches/criterion/gkr_msm_simple/case__(4, 11)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 11)/gkr_msm_simple_baseline/: benchmark.json  raw.csv  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 11)/new/: estimates.json  sample.json
benches/criterion/gkr_msm_simple/case__(4, 11)/report/: index.html
benches/criterion/gkr_msm_simple/case__(4, 12)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 12)/gkr_msm_simple_baseline/: benchmark.json
benches/criterion/gkr_msm_simple/case__(4, 12)/new/: estimates.json  raw.csv  sample.json  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 12)/report/: index.html
benches/criterion/gkr_msm_simple/case__(4, 13)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 13)/gkr_msm_simple_baseline/: benchmark.json  sample.json
benches/criterion/gkr_msm_simple/case__(4, 13)/new/: estimates.json  raw.csv  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 13)/report/: index.html
benches/criterion/gkr_msm_simple/case__(4, 14)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 14)/gkr_msm_simple_baseline/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 14)/new/: benchmark.json  raw.csv  sample.json  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 14)/report/: index.html
benches/criterion/gkr_msm_simple/case__(4, 15)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 15)/gkr_msm_simple_baseline/: benchmark.json  sample.json
benches/criterion/gkr_msm_simple/case__(4, 15)/new/: estimates.json  raw.csv  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 15)/report/: index.html
benches/criterion/gkr_msm_simple/case__(4, 16)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(4, 16)/gkr_msm_simple_baseline/: raw.csv
benches/criterion/gkr_msm_simple/case__(4, 16)/new/: benchmark.json  estimates.json  sample.json  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 16)/report/: index.html
benches/criterion/gkr_msm_simple/case__(4, 17)/gkr_msm_simple_baseline/: benchmark.json  estimates.json  tukey.json
benches/criterion/gkr_msm_simple/case__(4, 17)/new/: raw.csv  sample.json
benches/criterion/gkr_msm_simple/case__(4, 17)/report/: index.html
benches/criterion/gkr_msm_simple/case__(5, 10)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(5, 10)/gkr_msm_simple_baseline/: benchmark.json  sample.json
benches/criterion/gkr_msm_simple/case__(5, 10)/new/: estimates.json  raw.csv  tukey.json
benches/criterion/gkr_msm_simple/case__(5, 10)/report/: index.html
benches/criterion/gkr_msm_simple/case__(5, 11)/change/: estimates.json
benches/criterion/gkr_msm_simple/case__(5, 11)/gkr_msm_simple_baseline/: benchmark.json  estimates.json  sample.json
benches/criterion/gkr_msm_simple/case__(5, 11)/new/: raw.csv  tukey.json
benches/criterion/gkr_msm_simple/case__(5, 11)/report/: index.html
benches/criterion/gkr_msm_simple/report/: index.html
examples/: nn.rs  non_native_opening.rs  pippenger.rs  sumcheck.rs
src/: binary_msm.rs  bintree.rs  copoly.rs  gkr.rs  gkr_msm_simple.rs  grand_add.rs  lib.rs  msm_nonaffine.rs  nested_poly.rs  poly.rs  protocol.rs  pullback.rs  split.rs  sumcheck_trait.rs  transcript.rs  utils.rs
src/cleanup/: mod.rs  proof_transcript.rs  protocol2.rs  unipoly.rs
src/cleanup/polys/: common.rs  dense.rs  mod.rs  vecvec.rs
src/cleanup/protocols/: bintree_with_triangle.rs  gkr.rs  mod.rs  multiopen_reduction.rs  opening.rs  pippenger.rs  pippenger_ending.rs  pushforward.rs  splits.rs  sumcheck.rs  verifier_polys.rs  zero_check.rs
src/cleanup/protocols/gkrs/: bintree.rs  bintree_add.rs  gkr.rs  mod.rs  split_map_gkr.rs  triangle_add.rs
src/cleanup/protocols/pushforward/: logup_mainphase.rs  mod.rs  pushforward.rs
src/cleanup/protocols/sumchecks/: dense_eq.rs  mod.rs  vecvec.rs  vecvec_eq.rs
src/cleanup/utils/: algfn.rs  arith.rs  mod.rs  twisted_edwards_ops.rs
src/commitments/: knuckles.rs  kzg.rs  mod.rs
src/logup_lookup/: mod.rs
src/n_n_o/: mod.rs  n_n_sumcheck.rs  non_native_equalizer.rs  old_version_provers_response.rs  polynomial_with_zeros.rs  prover.rs  tests.rs  verifier.rs
src/n_n_o/cleanup/: matrix_poly.rs  mod.rs  non_native_evs.rs  utils.rs
src/non_native_opening/: bit_utils.rs  commit.rs  mod.rs  open.rs  tests.rs
src/polynomial/: format_helpers.rs  fragmented.rs  mod.rs  nested_poly.rs  rlepoly.rs  vecvec.rs
src/protocol/: better_generic_gkr.rs  bintree.rs  generic_gkr.rs  mod.rs  protocol.rs  spark_pushforward.rs  split.rs  split_at.rs  sumcheck.rs  sumcheck_trait.rs  sumcheckv2.rs  triangle.rs
tests/: bintree_triangle_integration.rs
(+181 files in other folders)
