[package]
name = "GKR-MSM"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version = "0.4.2", features = ["parallel"]}
ark-ff = { version = "0.4.2", features = ["parallel", "asm"] }
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-serialize = { version = "0.4.2", default-features = false, features = [
    "derive",
] }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }

rand = {version = "^ 0.8.5"}

liblasso = { git = "https://github.com/rebenkoy/liblasso.git", branch = "master", features = ["default", "multicore"]}
#liblasso = { path = "./../liblasso", features = ["default", "multicore"]}
hashcaster = { git = "https://github.com/morgana-proofs/hashcaster.git" }
bytemuck = "1.18.0"

ark-ed-on-bls12-381-bandersnatch = "0.4.0"
rayon = "1.10.0"
itertools = "0.12.1"
merlin = "3.0.0"
log = "0.4.21"
paste = "1.0.15"
# bandersnatch = { git = "https://github.com/zhenfeizhang/bandersnatch.git", version = "0.1.1", features = ["asm", "std"] }
# ark-ed-on-bls12-381-bandersnatch = { git = "https://github.com/arkworks-rs/algebra.git", rev = "bf96a5b"}
jemalloc-ctl = { version = "0.5.4", optional = true }
jemallocator = { version = "0.5.4", optional = true }
profi = { version = "*", default-features = true, optional = true }
num-traits = "0.2.19"

[features]
parallel = []
multicore = []
default = [
]
prof = ["dep:profi", "profi/enable", "profi/attributes", "profi/rayon", "profi/deep-hierarchy"]
memprof = ["dep:jemalloc-ctl", "dep:jemallocator"]

[dev-dependencies]
criterion = "0.3.6"
rstest = "0.23.0"
test-case = "3.3.1"



[[bench]]
name = "gkr_msm_simple"
harness = false

[[bench]]
name = "bintree"
harness = false

[[bench]]
name = "sumcheck"
harness = false

[[bench]]
name = "gkr_msm_simple_prof"
harness = false
[[example]]
name = "nn"
path = "examples/nn.rs"